// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkTopCountries Table Component rendering it renders the IP Details NetworkTopCountries table 1`] = `
.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 > * {
  max-width: 100%;
}

.c0 .inspectButtonComponent {
  pointer-events: none;
  opacity: 0;
  -webkit-transition: opacity 250ms ease;
  transition: opacity 250ms ease;
}

.c0 .inspectButtonComponent:focus-visible {
  pointer-events: auto;
  opacity: 1;
}

.c0:hover .inspectButtonComponent {
  pointer-events: auto;
  opacity: 1;
}

.c2 .siemSubtitle__item {
  color: #98A8C3;
  font-size: 12px;
  line-height: 1.5;
}

.c1 {
  position: relative;
}

.c3 tbody th,
.c3 tbody td {
  vertical-align: top;
}

.c3 tbody .euiTableCellContent {
  display: block;
}

.c4 {
  margin-top: 4px;
}

@media only screen and (min-width:575px) {
  .c2 .siemSubtitle__item {
    display: inline-block;
    margin-right: 16px;
  }

  .c2 .siemSubtitle__item:last-child {
    margin-right: 0;
  }
}

@media only screen and (min-width:768px) {
  .c5 .euiButtonIcon:last-child {
    margin-left: 28px;
  }

  .c5 .euiPagination {
    position: relative;
  }

  .c5 .euiPagination::before {
    bottom: 0;
    color: #1D2A3E;
    content: '\\2026';
    font-size: 14px;
    padding: 5px 8px;
    position: absolute;
    right: 24px;
  }
}

<div
  class="c0"
  data-test-subj="hoverVisibilityContainer"
>
  <div
    class="euiPanel euiPanel--plain euiPanel--paddingMedium c1 emotion-euiPanel-grow-m-m-plain-hasBorder"
    data-test-subj="table-topCountriesSource-loading-false"
  >
    <header
      class="toggle-expand siemHeaderSection css-125xqyz-header"
      data-test-subj="header-section"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-xs-flexStart-stretch-column"
        data-test-subj="headerSectionOuterFlexGroup"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-grow-1"
        >
          <div
            class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-center-row"
            data-test-subj="headerSectionInnerFlexGroup"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-grow-1"
            >
              <div
                class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-center-row"
              >
                <div
                  class="euiFlexItem emotion-euiFlexItem-grow-1"
                >
                  <div
                    class="euiFlexGroup header-section-titles emotion-euiFlexGroup-none-flexStart-stretch-row"
                  >
                    <div
                      class="euiFlexItem emotion-euiFlexItem-growZero"
                    >
                      <button
                        aria-label="Open"
                        class="euiButtonIcon emotion-euiButtonIcon-s-empty-text"
                        data-test-subj="query-toggle-header"
                        title="Open"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="euiButtonIcon__icon"
                          color="inherit"
                          data-euiicon-type="arrowDown"
                        />
                      </button>
                    </div>
                    <div
                      class="euiFlexItem emotion-euiFlexItem-grow-1"
                    >
                      <h2
                        class="euiTitle emotion-euiTitle-l"
                        data-test-subj="header-section-title"
                      >
                        <span
                          class="eui-textBreakNormal"
                        >
                          Source countries
                        </span>
                      </h2>
                    </div>
                  </div>
                </div>
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <button
                    aria-label="Inspect"
                    class="euiButtonIcon inspectButtonComponent emotion-euiButtonIcon-xs-empty-disabled-isDisabled"
                    data-test-subj="inspect-icon-button"
                    disabled=""
                    title="Inspect"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="euiButtonIcon__icon"
                      color="inherit"
                      data-euiicon-type="inspect"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-grow-1"
        >
          <div
            class="c2 siemSubtitle"
            data-test-subj="header-section-subtitle"
          >
            <p
              class="siemSubtitle__item siemSubtitle__item--text"
              data-test-subj="header-panel-subtitle"
            >
              Showing: 524 Countries
            </p>
          </div>
        </div>
      </div>
    </header>
    <div
      class="euiBasicTable c3"
      data-test-subj="paginated-basic-table"
    >
      <table
        class="euiTable emotion-euiTable-fixed-uncompressed-hasBackground-desktop"
        id="__table_generated-id"
        tabindex="-1"
      >
        <caption
          class="euiTableCaption emotion-euiTableCaptionStyles-euiScreenReaderOnly"
        />
        <thead>
          <tr>
            <th
              class="euiTableHeaderCell emotion-euiTableHeaderCell"
              data-test-subj="tableHeaderCell_Country_0"
              role="columnheader"
              scope="col"
              style="width: 20%;"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
              >
                <span
                  class="eui-textTruncate"
                  title="Country"
                >
                  Country
                </span>
              </div>
            </th>
            <th
              aria-sort="none"
              class="euiTableHeaderCell emotion-euiTableHeaderCell"
              data-test-subj="tableHeaderCell_node.network.bytes_in_1"
              role="columnheader"
              scope="col"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-block"
                id="generated-id-wrapper"
              >
                <button
                  class="euiTableHeaderButton emotion-euiTableHeaderCell__button"
                  data-test-subj="tableHeaderSortButton"
                  type="button"
                >
                  <div
                    class="euiTableCellContent emotion-euiTableCellContent-right-euiTableHeaderCell__content"
                  >
                    <span
                      class="eui-textTruncate"
                      title="Bytes in"
                    >
                      Bytes in
                    </span>
                    <span
                      class="euiTableSortIcon euiTableSortIcon--sortable"
                      color="subdued"
                      data-euiicon-type="sortable"
                    />
                  </div>
                </button>
              </span>
            </th>
            <th
              aria-sort="descending"
              class="euiTableHeaderCell emotion-euiTableHeaderCell"
              data-test-subj="tableHeaderCell_node.network.bytes_out_2"
              role="columnheader"
              scope="col"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-block"
                id="generated-id-wrapper"
              >
                <button
                  class="euiTableHeaderButton euiTableHeaderButton-isSorted emotion-euiTableHeaderCell__button"
                  data-test-subj="tableHeaderSortButton"
                  type="button"
                >
                  <div
                    class="euiTableCellContent emotion-euiTableCellContent-right-euiTableHeaderCell__content"
                  >
                    <span
                      class="eui-textTruncate"
                      title="Bytes out"
                    >
                      Bytes out
                    </span>
                    <span
                      class="euiTableSortIcon"
                      data-euiicon-type="sortDown"
                    />
                  </div>
                </button>
              </span>
            </th>
            <th
              aria-sort="none"
              class="euiTableHeaderCell emotion-euiTableHeaderCell"
              data-test-subj="tableHeaderCell_node.source.flows_3"
              role="columnheader"
              scope="col"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-block"
                id="generated-id-wrapper"
              >
                <button
                  class="euiTableHeaderButton emotion-euiTableHeaderCell__button"
                  data-test-subj="tableHeaderSortButton"
                  type="button"
                >
                  <div
                    class="euiTableCellContent emotion-euiTableCellContent-right-euiTableHeaderCell__content"
                  >
                    <span
                      class="eui-textTruncate"
                      title="Flows"
                    >
                      Flows
                    </span>
                    <span
                      class="euiTableSortIcon euiTableSortIcon--sortable"
                      color="subdued"
                      data-euiicon-type="sortable"
                    />
                  </div>
                </button>
              </span>
            </th>
            <th
              aria-sort="none"
              class="euiTableHeaderCell emotion-euiTableHeaderCell"
              data-test-subj="tableHeaderCell_node.source.source_ips_4"
              role="columnheader"
              scope="col"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-block"
                id="generated-id-wrapper"
              >
                <button
                  class="euiTableHeaderButton emotion-euiTableHeaderCell__button"
                  data-test-subj="tableHeaderSortButton"
                  type="button"
                >
                  <div
                    class="euiTableCellContent emotion-euiTableCellContent-right-euiTableHeaderCell__content"
                  >
                    <span
                      class="eui-textTruncate"
                      title="Source IPs"
                    >
                      Source IPs
                    </span>
                    <span
                      class="euiTableSortIcon euiTableSortIcon--sortable"
                      color="subdued"
                      data-euiicon-type="sortable"
                    />
                  </div>
                </button>
              </span>
            </th>
          </tr>
        </thead>
        <tbody
          class="css-0"
        >
          <tr
            class="euiTableRow euiTableRow-isSelectable emotion-euiTableRow-desktop"
          >
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
              style="width: 20%;"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-wrapText"
              >
                <span
                  class="css-purdnl-FlagWrapper e1v8vkkw0"
                  data-test-subj="country-flag"
                >
                  🇩🇪
                </span>
                 Germany
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-right-wrapText"
              >
                3.6GB
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-right-wrapText"
              >
                1GB
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-right-wrapText"
              >
                12,345
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-right-wrapText"
              >
                55
              </div>
            </td>
          </tr>
          <tr
            class="euiTableRow euiTableRow-isSelectable emotion-euiTableRow-desktop"
          >
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
              style="width: 20%;"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-wrapText"
              >
                <span
                  class="css-purdnl-FlagWrapper e1v8vkkw0"
                  data-test-subj="country-flag"
                >
                  🇺🇸
                </span>
                 United States of America
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-right-wrapText"
              >
                3.6GB
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-right-wrapText"
              >
                1GB
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-right-wrapText"
              >
                12,345
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-right-wrapText"
              >
                55
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="euiFlexGroup c4 emotion-euiFlexGroup-m-spaceBetween-center-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <div
          class="euiPopover emotion-euiPopover-inline-block"
          data-test-subj="loadingMoreSizeRowPopover"
          id="customizablePagination"
        >
          <button
            class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-text"
            type="button"
          >
            <span
              class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
            >
              <span
                class="eui-textTruncate euiButtonEmpty__text"
              >
                Rows per page: 10
              </span>
              <span
                color="inherit"
                data-euiicon-type="arrowDown"
              />
            </span>
          </button>
        </div>
      </div>
      <div
        class="euiFlexItem c5 emotion-euiFlexItem-growZero"
      >
        <nav
          aria-label="Table pagination"
          class="euiPagination emotion-euiPagination"
          data-test-subj="numberedPagination"
        >
          <span
            aria-atomic="true"
            aria-relevant="additions text"
            class="emotion-euiScreenReaderOnly"
            role="status"
          >
            Page 1 of 5
          </span>
          <button
            aria-label="Previous page"
            class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiPaginationButton"
            data-test-subj="pagination-button-previous"
            disabled=""
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="arrowLeft"
            />
          </button>
          <ul
            class="euiPagination__list emotion-euiPagination__list"
          >
            <li
              class="euiPagination__item"
            >
              <button
                aria-current="page"
                aria-label="Page 1 of 5"
                class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-disabled-isDisabled-euiPaginationButton-isActive"
                data-test-subj="pagination-button-0"
                disabled=""
                type="button"
              >
                <span
                  class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
                >
                  <span
                    class="eui-textTruncate euiButtonEmpty__text"
                  >
                    1
                  </span>
                </span>
              </button>
            </li>
            <li
              class="euiPagination__item"
            >
              <button
                aria-label="Page 2 of 5"
                class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text-euiPaginationButton"
                data-test-subj="pagination-button-1"
                type="button"
              >
                <span
                  class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
                >
                  <span
                    class="eui-textTruncate euiButtonEmpty__text"
                  >
                    2
                  </span>
                </span>
              </button>
            </li>
            <li
              class="euiPagination__item"
            >
              <button
                aria-label="Page 3 of 5"
                class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text-euiPaginationButton"
                data-test-subj="pagination-button-2"
                type="button"
              >
                <span
                  class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
                >
                  <span
                    class="eui-textTruncate euiButtonEmpty__text"
                  >
                    3
                  </span>
                </span>
              </button>
            </li>
            <li
              class="euiPagination__item"
            >
              <button
                aria-label="Page 4 of 5"
                class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text-euiPaginationButton"
                data-test-subj="pagination-button-3"
                type="button"
              >
                <span
                  class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
                >
                  <span
                    class="eui-textTruncate euiButtonEmpty__text"
                  >
                    4
                  </span>
                </span>
              </button>
            </li>
            <li
              class="euiPagination__item"
            >
              <button
                aria-label="Page 5 of 5"
                class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text-euiPaginationButton"
                data-test-subj="pagination-button-4"
                type="button"
              >
                <span
                  class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
                >
                  <span
                    class="eui-textTruncate euiButtonEmpty__text"
                  >
                    5
                  </span>
                </span>
              </button>
            </li>
          </ul>
          <button
            aria-label="Next page"
            class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-text-euiPaginationButton"
            data-test-subj="pagination-button-next"
            title="Next page"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="arrowRight"
            />
          </button>
        </nav>
      </div>
    </div>
  </div>
</div>
`;

exports[`NetworkTopCountries Table Component rendering it renders the default NetworkTopCountries table 1`] = `
.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0 > * {
  max-width: 100%;
}

.c0 .inspectButtonComponent {
  pointer-events: none;
  opacity: 0;
  -webkit-transition: opacity 250ms ease;
  transition: opacity 250ms ease;
}

.c0 .inspectButtonComponent:focus-visible {
  pointer-events: auto;
  opacity: 1;
}

.c0:hover .inspectButtonComponent {
  pointer-events: auto;
  opacity: 1;
}

.c2 .siemSubtitle__item {
  color: #98A8C3;
  font-size: 12px;
  line-height: 1.5;
}

.c1 {
  position: relative;
}

.c3 tbody th,
.c3 tbody td {
  vertical-align: top;
}

.c3 tbody .euiTableCellContent {
  display: block;
}

.c4 {
  margin-top: 4px;
}

@media only screen and (min-width:575px) {
  .c2 .siemSubtitle__item {
    display: inline-block;
    margin-right: 16px;
  }

  .c2 .siemSubtitle__item:last-child {
    margin-right: 0;
  }
}

@media only screen and (min-width:768px) {
  .c5 .euiButtonIcon:last-child {
    margin-left: 28px;
  }

  .c5 .euiPagination {
    position: relative;
  }

  .c5 .euiPagination::before {
    bottom: 0;
    color: #1D2A3E;
    content: '\\2026';
    font-size: 14px;
    padding: 5px 8px;
    position: absolute;
    right: 24px;
  }
}

<div
  class="c0"
  data-test-subj="hoverVisibilityContainer"
>
  <div
    class="euiPanel euiPanel--plain euiPanel--paddingMedium c1 emotion-euiPanel-grow-m-m-plain-hasBorder"
    data-test-subj="table-topCountriesSource-loading-false"
  >
    <header
      class="toggle-expand siemHeaderSection css-125xqyz-header"
      data-test-subj="header-section"
    >
      <div
        class="euiFlexGroup emotion-euiFlexGroup-xs-flexStart-stretch-column"
        data-test-subj="headerSectionOuterFlexGroup"
      >
        <div
          class="euiFlexItem emotion-euiFlexItem-grow-1"
        >
          <div
            class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-center-row"
            data-test-subj="headerSectionInnerFlexGroup"
          >
            <div
              class="euiFlexItem emotion-euiFlexItem-grow-1"
            >
              <div
                class="euiFlexGroup emotion-euiFlexGroup-s-flexStart-center-row"
              >
                <div
                  class="euiFlexItem emotion-euiFlexItem-grow-1"
                >
                  <div
                    class="euiFlexGroup header-section-titles emotion-euiFlexGroup-none-flexStart-stretch-row"
                  >
                    <div
                      class="euiFlexItem emotion-euiFlexItem-growZero"
                    >
                      <button
                        aria-label="Open"
                        class="euiButtonIcon emotion-euiButtonIcon-s-empty-text"
                        data-test-subj="query-toggle-header"
                        title="Open"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="euiButtonIcon__icon"
                          color="inherit"
                          data-euiicon-type="arrowDown"
                        />
                      </button>
                    </div>
                    <div
                      class="euiFlexItem emotion-euiFlexItem-grow-1"
                    >
                      <h2
                        class="euiTitle emotion-euiTitle-l"
                        data-test-subj="header-section-title"
                      >
                        <span
                          class="eui-textBreakNormal"
                        >
                          Source countries
                        </span>
                      </h2>
                    </div>
                  </div>
                </div>
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <button
                    aria-label="Inspect"
                    class="euiButtonIcon inspectButtonComponent emotion-euiButtonIcon-xs-empty-disabled-isDisabled"
                    data-test-subj="inspect-icon-button"
                    disabled=""
                    title="Inspect"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="euiButtonIcon__icon"
                      color="inherit"
                      data-euiicon-type="inspect"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFlexItem emotion-euiFlexItem-grow-1"
        >
          <div
            class="c2 siemSubtitle"
            data-test-subj="header-section-subtitle"
          >
            <p
              class="siemSubtitle__item siemSubtitle__item--text"
              data-test-subj="header-panel-subtitle"
            >
              Showing: 524 Countries
            </p>
          </div>
        </div>
      </div>
    </header>
    <div
      class="euiBasicTable c3"
      data-test-subj="paginated-basic-table"
    >
      <table
        class="euiTable emotion-euiTable-fixed-uncompressed-hasBackground-desktop"
        id="__table_generated-id"
        tabindex="-1"
      >
        <caption
          class="euiTableCaption emotion-euiTableCaptionStyles-euiScreenReaderOnly"
        />
        <thead>
          <tr>
            <th
              class="euiTableHeaderCell emotion-euiTableHeaderCell"
              data-test-subj="tableHeaderCell_Country_0"
              role="columnheader"
              scope="col"
              style="width: 20%;"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-euiTableHeaderCell__content"
              >
                <span
                  class="eui-textTruncate"
                  title="Country"
                >
                  Country
                </span>
              </div>
            </th>
            <th
              aria-sort="none"
              class="euiTableHeaderCell emotion-euiTableHeaderCell"
              data-test-subj="tableHeaderCell_node.network.bytes_in_1"
              role="columnheader"
              scope="col"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-block"
                id="generated-id-wrapper"
              >
                <button
                  class="euiTableHeaderButton emotion-euiTableHeaderCell__button"
                  data-test-subj="tableHeaderSortButton"
                  type="button"
                >
                  <div
                    class="euiTableCellContent emotion-euiTableCellContent-right-euiTableHeaderCell__content"
                  >
                    <span
                      class="eui-textTruncate"
                      title="Bytes in"
                    >
                      Bytes in
                    </span>
                    <span
                      class="euiTableSortIcon euiTableSortIcon--sortable"
                      color="subdued"
                      data-euiicon-type="sortable"
                    />
                  </div>
                </button>
              </span>
            </th>
            <th
              aria-sort="descending"
              class="euiTableHeaderCell emotion-euiTableHeaderCell"
              data-test-subj="tableHeaderCell_node.network.bytes_out_2"
              role="columnheader"
              scope="col"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-block"
                id="generated-id-wrapper"
              >
                <button
                  class="euiTableHeaderButton euiTableHeaderButton-isSorted emotion-euiTableHeaderCell__button"
                  data-test-subj="tableHeaderSortButton"
                  type="button"
                >
                  <div
                    class="euiTableCellContent emotion-euiTableCellContent-right-euiTableHeaderCell__content"
                  >
                    <span
                      class="eui-textTruncate"
                      title="Bytes out"
                    >
                      Bytes out
                    </span>
                    <span
                      class="euiTableSortIcon"
                      data-euiicon-type="sortDown"
                    />
                  </div>
                </button>
              </span>
            </th>
            <th
              aria-sort="none"
              class="euiTableHeaderCell emotion-euiTableHeaderCell"
              data-test-subj="tableHeaderCell_node.source.flows_3"
              role="columnheader"
              scope="col"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-block"
                id="generated-id-wrapper"
              >
                <button
                  class="euiTableHeaderButton emotion-euiTableHeaderCell__button"
                  data-test-subj="tableHeaderSortButton"
                  type="button"
                >
                  <div
                    class="euiTableCellContent emotion-euiTableCellContent-right-euiTableHeaderCell__content"
                  >
                    <span
                      class="eui-textTruncate"
                      title="Flows"
                    >
                      Flows
                    </span>
                    <span
                      class="euiTableSortIcon euiTableSortIcon--sortable"
                      color="subdued"
                      data-euiicon-type="sortable"
                    />
                  </div>
                </button>
              </span>
            </th>
            <th
              aria-sort="none"
              class="euiTableHeaderCell emotion-euiTableHeaderCell"
              data-test-subj="tableHeaderCell_node.source.source_ips_4"
              role="columnheader"
              scope="col"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-block"
                id="generated-id-wrapper"
              >
                <button
                  class="euiTableHeaderButton emotion-euiTableHeaderCell__button"
                  data-test-subj="tableHeaderSortButton"
                  type="button"
                >
                  <div
                    class="euiTableCellContent emotion-euiTableCellContent-right-euiTableHeaderCell__content"
                  >
                    <span
                      class="eui-textTruncate"
                      title="Source IPs"
                    >
                      Source IPs
                    </span>
                    <span
                      class="euiTableSortIcon euiTableSortIcon--sortable"
                      color="subdued"
                      data-euiicon-type="sortable"
                    />
                  </div>
                </button>
              </span>
            </th>
            <th
              aria-sort="none"
              class="euiTableHeaderCell emotion-euiTableHeaderCell"
              data-test-subj="tableHeaderCell_node.source.destination_ips_5"
              role="columnheader"
              scope="col"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-block"
                id="generated-id-wrapper"
              >
                <button
                  class="euiTableHeaderButton emotion-euiTableHeaderCell__button"
                  data-test-subj="tableHeaderSortButton"
                  type="button"
                >
                  <div
                    class="euiTableCellContent emotion-euiTableCellContent-right-euiTableHeaderCell__content"
                  >
                    <span
                      class="eui-textTruncate"
                      title="Destination IPs"
                    >
                      Destination IPs
                    </span>
                    <span
                      class="euiTableSortIcon euiTableSortIcon--sortable"
                      color="subdued"
                      data-euiicon-type="sortable"
                    />
                  </div>
                </button>
              </span>
            </th>
          </tr>
        </thead>
        <tbody
          class="css-0"
        >
          <tr
            class="euiTableRow euiTableRow-isSelectable emotion-euiTableRow-desktop"
          >
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
              style="width: 20%;"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-wrapText"
              >
                <span
                  class="css-purdnl-FlagWrapper e1v8vkkw0"
                  data-test-subj="country-flag"
                >
                  🇩🇪
                </span>
                 Germany
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-right-wrapText"
              >
                3.6GB
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-right-wrapText"
              >
                1GB
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-right-wrapText"
              >
                12,345
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-right-wrapText"
              >
                55
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-right-wrapText"
              >
                12
              </div>
            </td>
          </tr>
          <tr
            class="euiTableRow euiTableRow-isSelectable emotion-euiTableRow-desktop"
          >
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
              style="width: 20%;"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-wrapText"
              >
                <span
                  class="css-purdnl-FlagWrapper e1v8vkkw0"
                  data-test-subj="country-flag"
                >
                  🇺🇸
                </span>
                 United States of America
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-right-wrapText"
              >
                3.6GB
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-right-wrapText"
              >
                1GB
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-right-wrapText"
              >
                12,345
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-right-wrapText"
              >
                55
              </div>
            </td>
            <td
              class="euiTableRowCell emotion-euiTableRowCell-middle-desktop"
            >
              <div
                class="euiTableCellContent emotion-euiTableCellContent-right-wrapText"
              >
                12
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="euiFlexGroup c4 emotion-euiFlexGroup-m-spaceBetween-center-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <div
          class="euiPopover emotion-euiPopover-inline-block"
          data-test-subj="loadingMoreSizeRowPopover"
          id="customizablePagination"
        >
          <button
            class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-xs-empty-text"
            type="button"
          >
            <span
              class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
            >
              <span
                class="eui-textTruncate euiButtonEmpty__text"
              >
                Rows per page: 10
              </span>
              <span
                color="inherit"
                data-euiicon-type="arrowDown"
              />
            </span>
          </button>
        </div>
      </div>
      <div
        class="euiFlexItem c5 emotion-euiFlexItem-growZero"
      >
        <nav
          aria-label="Table pagination"
          class="euiPagination emotion-euiPagination"
          data-test-subj="numberedPagination"
        >
          <span
            aria-atomic="true"
            aria-relevant="additions text"
            class="emotion-euiScreenReaderOnly"
            role="status"
          >
            Page 1 of 5
          </span>
          <button
            aria-label="Previous page"
            class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-disabled-isDisabled-euiPaginationButton"
            data-test-subj="pagination-button-previous"
            disabled=""
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="arrowLeft"
            />
          </button>
          <ul
            class="euiPagination__list emotion-euiPagination__list"
          >
            <li
              class="euiPagination__item"
            >
              <button
                aria-current="page"
                aria-label="Page 1 of 5"
                class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-disabled-isDisabled-euiPaginationButton-isActive"
                data-test-subj="pagination-button-0"
                disabled=""
                type="button"
              >
                <span
                  class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
                >
                  <span
                    class="eui-textTruncate euiButtonEmpty__text"
                  >
                    1
                  </span>
                </span>
              </button>
            </li>
            <li
              class="euiPagination__item"
            >
              <button
                aria-label="Page 2 of 5"
                class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text-euiPaginationButton"
                data-test-subj="pagination-button-1"
                type="button"
              >
                <span
                  class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
                >
                  <span
                    class="eui-textTruncate euiButtonEmpty__text"
                  >
                    2
                  </span>
                </span>
              </button>
            </li>
            <li
              class="euiPagination__item"
            >
              <button
                aria-label="Page 3 of 5"
                class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text-euiPaginationButton"
                data-test-subj="pagination-button-2"
                type="button"
              >
                <span
                  class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
                >
                  <span
                    class="eui-textTruncate euiButtonEmpty__text"
                  >
                    3
                  </span>
                </span>
              </button>
            </li>
            <li
              class="euiPagination__item"
            >
              <button
                aria-label="Page 4 of 5"
                class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text-euiPaginationButton"
                data-test-subj="pagination-button-3"
                type="button"
              >
                <span
                  class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
                >
                  <span
                    class="eui-textTruncate euiButtonEmpty__text"
                  >
                    4
                  </span>
                </span>
              </button>
            </li>
            <li
              class="euiPagination__item"
            >
              <button
                aria-label="Page 5 of 5"
                class="euiButtonEmpty euiPaginationButton emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text-euiPaginationButton"
                data-test-subj="pagination-button-4"
                type="button"
              >
                <span
                  class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
                >
                  <span
                    class="eui-textTruncate euiButtonEmpty__text"
                  >
                    5
                  </span>
                </span>
              </button>
            </li>
          </ul>
          <button
            aria-label="Next page"
            class="euiButtonIcon euiPaginationArrowButton emotion-euiButtonIcon-xs-empty-text-euiPaginationButton"
            data-test-subj="pagination-button-next"
            title="Next page"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="arrowRight"
            />
          </button>
        </nav>
      </div>
    </div>
  </div>
</div>
`;
